--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ rauth==0.7.3
 Flask_Login==0.4.0
 Flask==0.12.2
 Flask_SQLAlchemy==2.3.2
-sqlalchemy_migrate==0.11.0
+flask_migrate==2.1.1
 Flask_WTF==0.14.2
 WTForms==2.1
