--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,86 @@
-sortedcontainers==1.5.7
+alembic==0.9.6
+apt-clone==0.2.1
+apt-xapian-index==0.47
+apturl==0.5.2
+astroid==1.5.3
 beautifulsoup4==4.6.0
-python_dateutil==2.6.1
-Requests==2.18.4
-rauth==0.7.3
-Flask_Login==0.4.0
+blinker==1.3
+bottle==0.12.13
+bottle-cork==0.12.0
+Brlapi==0.6.4
+certifi==2017.11.5
+chardet==3.0.4
+click==6.7
+command-not-found==0.3
+configobj==5.0.6
+cryptography==1.2.3
+decorator==4.1.2
+defer==1.0.6
+devscripts===2.16.2ubuntu3
+dirspec==13.10
+epydoc==3.0.1
 Flask==0.12.2
-Flask_SQLAlchemy==2.3.2
-flask_migrate==2.1.1
-Flask_WTF==0.14.2
+Flask-Login==0.4.0
+Flask-Migrate==2.1.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+httplib2==0.9.1
+idna==2.6
+infinity==1.4
+intervals==0.8.0
+isort==4.2.15
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+louis==2.6.4
+lxml==3.5.0
+Mako==1.0.7
+MarkupSafe==1.0
+mccabe==0.6.1
+myougiden==0.8.5
+oauthlib==1.0.3
+oneconf==0.3.9
+pbr==3.1.1
+pexpect==4.0.1
+Pillow==3.1.2
+piston-mini-client==0.7.5
+ptyprocess==0.5
+pyasn1==0.1.9
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0
+pygobject==3.20.0
+PyICU==1.9.2
+PyJWT==1.3.0
+pylint==1.7.4
+python-apt==1.1.0b1
+python-dateutil==2.6.1
+python-debian==0.1.27
+python-editor==1.0.3
+pyxdg==0.25
+rauth==0.7.3
+reportlab==3.3.0
+requests==2.18.4
+sessioninstaller==0.0.0
+six==1.10.0
+sortedcontainers==1.5.7
+SQLAlchemy==1.1.15
+sqlalchemy-migrate==0.11.0
+sqlparse==0.2.4
+system-service==0.3
+Tempita==0.5.2
+textmagic==2.0.3
+thin-client-config-agent==0.8
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.22
+validators==0.12.0
+virtkey==0.63.0
+virtualenv==15.0.1
+Werkzeug==0.12.2
+wrapt==1.10.11
 WTForms==2.1
-google-api-python-client
+WTForms-Components==0.10.3
+xkit==0.0.0
